--- a/index.html
+++ b/index.html
@@ -23,18 +23,19 @@
     <h1 class="title">The Story of the Chinese Farmer</h1>
 
     <h3 class="subtitle">
-      Is it a <span class="good">good </span> thing? Is that a bad thing? I
-      don't know.
+      Is it a <span class="good">good </span> thing? Is that a
+      <span class="bad">bad </span> thing? I don't know.
     </h3>
     <p class="moreInfo">May 11, 2016, Alexandre Gorius</p>
 
     <p class="text1">
-      In nature, Good & Evil do not exist. The Universe itself is neither good
-      nor bad, but a potential in permanent development.
+      In nature, Good & Evil do not exist. The Universe itself is neither
+      <span class="good">good </span> nor <span class="bad">bad </span>, but a
+      potential in permanent development.
     </p>
     <p>In life, there are 4 types of people.</p>
     <ul class="list">
-      <li>people who think the Internet is good,</li>
+      <li>people who think the Internet is <span class="good">good </span>,</li>
       <li>people who think the Internet is evil,</li>
       <li>people who think the Internet is cats,</li>
       <li>people who don't think about it.</li>
@@ -88,22 +89,39 @@
         Once upon a time there was a Chinese farmer whose horse ran away. That
         evening, all of his neighbors came around to commiserate. They said, “We
         are so sorry to hear your horse has run away. This is most unfortunate.”
-        The farmer said, “Is it good? Is it bad? I don't know.” The next day the
-        horse came back bringing seven wild horses with it, and in the evening
-        everybody came back and said, “Oh, isn’t that lucky. What a great turn
-        of events. You now have eight horses!” The farmer again said, “Is it
-        good? Is it bad? I don't know.” The following day his son tried to break
-        one of the horses, and while riding it, he was thrown and broke his leg.
-        The neighbors then said, “Oh dear, that’s too bad,” and the farmer
-        responded, “Is it good? Is it bad? I don't know.” The next day the
-        conscription officers came around to conscript people into the army, and
-        they rejected his son because he had a broken leg. Again all the
-        neighbors came around and said, “Isn’t that great!” Again, he said, “Is
-        it good? Is it bad? I don't know.” The whole process of nature is an
-        integrated process of immense complexity, and it’s really impossible to
-        tell whether anything that happens in it is good or bad — because you
-        never know what will be the consequence of the misfortune; or, you never
-        know what will be the consequences of good fortune.
+        The farmer said,
+        <span class="farmer">
+          “Is it <span class="good">good </span>? Is it
+          <span class="bad">bad </span>? I don't know.”
+        </span>
+        The next day the horse came back bringing seven wild horses with it, and
+        in the evening everybody came back and said, “Oh, isn’t that lucky. What
+        a great turn of events. You now have eight horses!” The farmer again
+        said,
+        <span class="farmer"
+          >“Is it <span class="good">good </span>? Is it
+          <span class="bad">bad </span>? I don't know.”</span
+        >
+        The following day his son tried to break one of the horses, and while
+        riding it, he was thrown and broke his leg. The neighbors then said,
+        <span class="neighbor"
+          >“Oh dear, that’s too <span class="bad">bad </span>,”
+        </span>
+        and the farmer responded,
+        <span class="farmer">
+          “Is it <span class="good">good </span>? Is it
+          <span class="bad">bad </span>? I don't know.” </span
+        >The next day the conscription officers came around to conscript people
+        into the army, and they rejected his son because he had a broken leg.
+        Again all the neighbors came around and said, “Isn’t that great!” Again,
+        he said, “Is it <span class="good">good </span>? Is it
+        <span class="bad">bad </span>? I don't know.” The whole process of
+        nature is an integrated process of immense complexity, and it’s really
+        impossible to tell whether anything that happens in it is
+        <span class="good">good </span> or <span class="bad">bad </span> —
+        because you never know what will be the consequence of the misfortune;
+        or, you never know what will be the consequences of
+        <span class="good">good </span> fortune.
       </p>
       <p class="quoteAuthor">
         <a
@@ -119,7 +137,9 @@
     <table title=" Table representing the farmer's philosophy.">
       <tr>
         <th>Event</th>
-        <th class="good">Good or Bad ?</th>
+        <th>
+          <span class="good">good </span> or <span class="bad">bad </span>?
+        </th>
       </tr>
       <tr>
         <td>Lose a horse</td>
@@ -144,8 +164,10 @@
 
     <h2 id="conclusion">Conclusion</h2>
     <p class="conclusion">
-      Good and Bad are just one perspective. Bananas are good for monkeys, but
-      monkeys are not good for bananas. Let's not make a big deal out of it...
+      Good and Bad are just one perspective. Bananas are
+      <span class="good">good </span> for monkeys, but monkeys are not
+      <span class="good">good </span> for bananas. Let's not make a big deal out
+      of it...
     </p>
 
     <footer>
