--- a/index.html
+++ b/index.html
@@ -27,101 +27,95 @@
       <span class="bad">bad </span> thing? I don't know.
     </h3>
     <p class="moreInfo">May 11, 2016, Alexandre Gorius</p>
-
-    <p class="text1">
-      In nature, Good & Evil do not exist. The Universe itself is neither
-      <span class="good">good </span> nor <span class="bad">bad </span>, but a
-      potential in permanent development.
-    </p>
-    <p>In life, there are 4 types of people.</p>
-    <ul class="list">
-      <li>people who think the Internet is <span class="good">good </span>,</li>
-      <li>people who think the Internet is evil,</li>
-      <li>people who think the Internet is cats,</li>
-      <li>people who don't think about it.</li>
-    </ul>
-    <figure>
-      <img
-        src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg"
-        alt="picture of man opening the door"
-      />
-      <figcaption>Man opening the door</figcaption>
-    </figure>
-
-    <p class="citation">
-      Up in space, turning around, looking at the earth’s face. From that rock’s
-      perspective on Mars or that gaz opinion from Jupiter, nothing cares about
-      your problems. Up there, it’s just not serious, and there’s no such thing
-      as an issue. Down here, the only reality is the one inside our brain.
-      Nothing exists if the brain doesn’t think it. Nothing exists neither if
-      our senses don’t transmit the message. That means that if we mis sense,
-      our reality changes. That’s possible because our perception is limited :
-      you can’t see at 360 degrees for example. If we mis translate the message,
-      our reality changes. If we think it in a way, our reality changes
-      depending on that way. Therefore, if we can change reality that much,
-      everything’s fake. They’re proofs to that. Fall in love with someone and
-      you’ll see that person as divine. Pull yourself out of that grip and the
-      divine falls from clouds to solid ground, revealing him or herself
-      differently. But the person is the same, you just changed your mind.
-      Everything works like that : it’s not just that you can make your world,
-      it’s that you passively do it anyway.
-    </p>
-    <figure>
-      <img
-        src="http://static2.businessinsider.com/image/52fe8230eab8ea4275063b89/nasa-has-determined-where-the-mysterious-jelly-doughnut-rock-on-mars-came-from.jpg"
-        alt="rock in the ground"
-      />
-      <figcaption>what does he think about it?</figcaption>
-    </figure>
-
-    <h1 id="theStory">The story</h1>
-    <figure>
-      <img
-        src="https://cdn-images-1.medium.com/max/800/1*IQqkmPXYZuJViY5p-ymk0A.jpeg"
-        alt="chinese's picture "
-        title="The Old Chinese Farmer"
-      />
-      <figcaption>The Old Chinese Farmer</figcaption>
-    </figure>
-
     <blockquote>
+      <p class="text1">
+        In nature, Good & Evil do not exist. The Universe itself is neither
+        <span class="good">good </span> nor <span class="bad">bad </span>, but a
+        potential in permanent development.
+      </p>
+    </blockquote>
+    <h2>In life, there are 4 types of people.</h2>
+    <section class="box">
+      <ul class="list">
+        <li>
+          people who think the Internet is <span class="good">good </span>,
+        </li>
+        <li>people who think the Internet is evil,</li>
+        <li>people who think the Internet is cats,</li>
+        <li>people who don't think about it.</li>
+      </ul>
+      <figure>
+        <img
+          src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg"
+          alt="picture of man opening the door"
+        />
+        <figcaption>Man opening the door</figcaption>
+      </figure>
+    </section>
+
+    <section class="citation">
+      <p>
+        Up in space, turning around, looking at the earth’s face. From that
+        rock’s perspective on Mars or that gaz opinion from Jupiter, nothing
+        cares about your problems. Up there, it’s just not serious, and there’s
+        no such thing as an issue. Down here, the only reality is the one inside
+        our brain. Nothing exists if the brain doesn’t think it. Nothing exists
+        neither if our senses don’t transmit the message. That means that if we
+        mis sense, our reality changes. That’s possible because our perception
+        is limited : you can’t see at 360 degrees for example. If we mis
+        translate the message, our reality changes. If we think it in a way, our
+        reality changes depending on that way. Therefore, if we can change
+        reality that much, everything’s fake. They’re proofs to that. Fall in
+        love with someone and you’ll see that person as divine. Pull yourself
+        out of that grip and the divine falls from clouds to solid ground,
+        revealing him or herself differently. But the person is the same, you
+        just changed your mind. Everything works like that : it’s not just that
+        you can make your world, it’s that you passively do it anyway.
+      </p>
+
+      <figure>
+        <img
+          src="http://static2.businessinsider.com/image/52fe8230eab8ea4275063b89/nasa-has-determined-where-the-mysterious-jelly-doughnut-rock-on-mars-came-from.jpg"
+          alt="rock in the ground"
+        />
+        <figcaption>what does he think about it?</figcaption>
+      </figure>
+    </section>
+
+    <section>
+      <h2  id="theStory" >The story</h2>
+      <figure>
+        <img
+          src="https://cdn-images-1.medium.com/max/800/1*IQqkmPXYZuJViY5p-ymk0A.jpeg"
+          alt="The Old Chinese Farmer"
+        />
+        <figcaption>The Old Chinese Farmer</figcaption>
+      </figure>
       <p>
         Once upon a time there was a Chinese farmer whose horse ran away. That
-        evening, all of his neighbors came around to commiserate. They said, “We
-        are so sorry to hear your horse has run away. This is most unfortunate.”
-        The farmer said,
-        <span class="farmer">
-          “Is it <span class="good">good </span>? Is it
-          <span class="bad">bad </span>? I don't know.”
-        </span>
-        The next day the horse came back bringing seven wild horses with it, and
-        in the evening everybody came back and said, “Oh, isn’t that lucky. What
-        a great turn of events. You now have eight horses!” The farmer again
-        said,
-        <span class="farmer"
-          >“Is it <span class="good">good </span>? Is it
-          <span class="bad">bad </span>? I don't know.”</span
-        >
+        evening, all of his neighbors came around to commiserate. They said, <blockquote class="neighbors">“We
+        are so sorry to hear your horse has run away. This is most unfortunate.”</blockquote>
+        The farmer said, <blockquote class="farmer">“Is it <span class="good ">good</span> ? Is it <span class="bad"> bad?</span> I don't know.”</blockquote> 
+      </p> 
+      <p>The next day the horse came back bringing seven wild horses with it, and in the evening
+        everybody came back and said, <blockquote class="neighbors">“Oh, isn’t that lucky. What a great turn of
+        events. You now have eight horses!”</blockquote> The farmer again said, <blockquote class="farmer">“Is it<span class="good ">good</span> ? Is it <span class="bad"> bad?</span>  I don't know.”</blockquote>
+      </p>
+      <p>
         The following day his son tried to break one of the horses, and while
-        riding it, he was thrown and broke his leg. The neighbors then said,
-        <span class="neighbor"
-          >“Oh dear, that’s too <span class="bad">bad </span>,”
-        </span>
-        and the farmer responded,
-        <span class="farmer">
-          “Is it <span class="good">good </span>? Is it
-          <span class="bad">bad </span>? I don't know.” </span
-        >The next day the conscription officers came around to conscript people
-        into the army, and they rejected his son because he had a broken leg.
-        Again all the neighbors came around and said, “Isn’t that great!” Again,
-        he said, “Is it <span class="good">good </span>? Is it
-        <span class="bad">bad </span>? I don't know.” The whole process of
-        nature is an integrated process of immense complexity, and it’s really
-        impossible to tell whether anything that happens in it is
-        <span class="good">good </span> or <span class="bad">bad </span> —
-        because you never know what will be the consequence of the misfortune;
-        or, you never know what will be the consequences of
-        <span class="good">good </span> fortune.
+        riding it, he was thrown and broke his leg. The neighbors then said, <blockquote class="neighbors">“Oh
+        dear, that’s too bad,” </blockquote> and the farmer responded, <blockquote class="farmer">“Is it <span class="good ">good</span>? Is it <span class="bad"> bad?</span> ? I
+        don't know.”</blockquote> The next day the conscription officers came around to
+        conscript people into the army, and they rejected his son because he had a
+        broken leg. Again all the neighbors came around and said, <blockquote class="neighbors">“Isn’t that
+        great!”</blockquote> Again, he said, <blockquote class="farmer">“Is it <span class="good ">good</span>? Is it <span class="bad"> bad?</span>  I don't know.”</blockquote>
+      </p>
+      <p>
+        The whole process of nature is an integrated process of immense
+        complexity, and it’s really impossible to tell whether anything that
+        happens in it is <span class="good">good</span> or <span class="bad">bad</span> — because you never know what will be the
+        consequence of the misfortune; or, you never know what will be the
+        consequences of <span class="good">good</span> fortune.
       </p>
       <p class="quoteAuthor">
         <a
@@ -131,9 +125,9 @@
           >Alan Watts</a
         >
       </p>
-    </blockquote>
+    </section>
 
-    <p class="tableDescripiton">Here is this dialog in the form of a table</p>
+    <h3 class="tableDescripiton">Here is this dialog in the form of a table</h3>
     <table title=" Table representing the farmer's philosophy.">
       <tr>
         <th>Event</th>
@@ -169,6 +163,14 @@
       <span class="good">good </span> for bananas. Let's not make a big deal out
       of it...
     </p>
+
+    <a href="#" class="scrollupUP">
+      <img src="./assets/img/arrow-up-solid.svg" alt="arrow">
+    </a>
+
+    <aside class="notification">
+      <p>Vous avez un nouveau message!</p>
+    </aside>
 
     <footer>
       Copyright Just Another Company 2017. All right reserved.
