Check if HTML is valid

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </section>
 
     <section>
-      <h2  id="theStory" >The story</h2>
+      <h2 id="theStory">The story</h2>
       <figure>
         <img
           src="https://cdn-images-1.medium.com/max/800/1*IQqkmPXYZuJViY5p-ymk0A.jpeg"
@@ -93,27 +93,58 @@
       </figure>
       <p>
         Once upon a time there was a Chinese farmer whose horse ran away. That
-        evening, all of his neighbors came around to commiserate. They said, <blockquote class="neighbors">“We
-        are so sorry to hear your horse has run away. This is most unfortunate.”</blockquote>
-        The farmer said, <blockquote class="farmer">“Is it <span class="good ">good</span> ? Is it <span class="bad"> bad?</span> I don't know.”</blockquote> 
-      </p> 
-      <p>The next day the horse came back bringing seven wild horses with it, and in the evening
-        everybody came back and said, <blockquote class="neighbors">“Oh, isn’t that lucky. What a great turn of
-        events. You now have eight horses!”</blockquote> The farmer again said, <blockquote class="farmer">“Is it<span class="good ">good</span> ? Is it <span class="bad"> bad?</span>  I don't know.”</blockquote>
+        evening, all of his neighbors came around to commiserate. They said,
       </p>
+      <blockquote class="neighbors">
+        “We are so sorry to hear your horse has run away. This is most
+        unfortunate.”
+      </blockquote>
+      <p>The farmer said,</p>
+      <blockquote class="farmer">
+        “Is it <span class="good">good</span> ? Is it
+        <span class="bad"> bad?</span> I don't know.”
+      </blockquote>
+      <p>
+        The next day the horse came back bringing seven wild horses with it, and
+        in the evening everybody came back and said,
+      </p>
+      <blockquote class="neighbors">
+        “Oh, isn’t that lucky. What a great turn of events. You now have eight
+        horses!”
+      </blockquote>
+      <p>The farmer again said,</p>
+      <blockquote class="farmer">
+        “Is it<span class="good">good</span> ? Is it
+        <span class="bad"> bad?</span> I don't know.”
+      </blockquote>
+
       <p>
         The following day his son tried to break one of the horses, and while
-        riding it, he was thrown and broke his leg. The neighbors then said, <blockquote class="neighbors">“Oh
-        dear, that’s too bad,” </blockquote> and the farmer responded, <blockquote class="farmer">“Is it <span class="good ">good</span>? Is it <span class="bad"> bad?</span> ? I
-        don't know.”</blockquote> The next day the conscription officers came around to
-        conscript people into the army, and they rejected his son because he had a
-        broken leg. Again all the neighbors came around and said, <blockquote class="neighbors">“Isn’t that
-        great!”</blockquote> Again, he said, <blockquote class="farmer">“Is it <span class="good ">good</span>? Is it <span class="bad"> bad?</span>  I don't know.”</blockquote>
+        riding it, he was thrown and broke his leg. The neighbors then said,
       </p>
+      <blockquote class="neighbors">“Oh dear, that’s too bad,”</blockquote>
+      <p>and the farmer responded,</p>
+      <blockquote class="farmer">
+        “Is it <span class="good">good</span>? Is it
+        <span class="bad"> bad?</span> ? I don't know.”
+      </blockquote>
+      <p>
+        The next day the conscription officers came around to conscript people
+        into the army, and they rejected his son because he had a broken leg.
+        Again all the neighbors came around and said,
+      </p>
+      <blockquote class="neighbors">“Isn’t that great!”</blockquote>
+      <p>Again, he said,</p>
+      <blockquote class="farmer">
+        “Is it <span class="good">good</span>? Is it
+        <span class="bad"> bad?</span> I don't know.”
+      </blockquote>
+
       <p>
         The whole process of nature is an integrated process of immense
         complexity, and it’s really impossible to tell whether anything that
-        happens in it is <span class="good">good</span> or <span class="bad">bad</span> — because you never know what will be the
+        happens in it is <span class="good">good</span> or
+        <span class="bad">bad</span> — because you never know what will be the
         consequence of the misfortune; or, you never know what will be the
         consequences of <span class="good">good</span> fortune.
       </p>
@@ -165,7 +196,7 @@
     </p>
 
     <a href="#" class="scrollupUP">
-      <img src="./assets/img/arrow-up-solid.svg" alt="arrow">
+      <img src="./assets/img/arrow-up-solid.svg" alt="arrow" />
     </a>
 
     <aside class="notification">
