Style footer and actions

--- a/reproducePage/turlututu/index.html
+++ b/reproducePage/turlututu/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page</title>
+    <link rel="icon" href="./assets/img/AvatarMaker (2).png" type="image/png" />
     <link
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
@@ -42,55 +43,91 @@
       <div class="login"><i class="uil uil-user nav_icon"></i>Log In</div>
     </header>
     <section>
-      <div class="top">
-        <div class="myAvatar">
-          <img
-            src="./assets/img/AvatarMaker (2).png"
-            alt="Glaucielle's avatar"
-          />
+      <div class="blueSection">
+        <div class="top">
+          <div class="myAvatar">
+            <img
+              src="./assets/img/AvatarMaker (2).png"
+              alt="Glaucielle's avatar"
+            />
+          </div>
+          <div class="content">
+            <p>The Plug and Play Database service</p>
+            <button>Start building NOW >></button>
+          </div>
         </div>
-        <div class="content">
-          <p>The Plug and Play Database service</p>
-          <button>Start building NOW >></button>
+        <div class="division">For awesome projects with deadlines</div>
+        <div class="information">
+          <div class="use">
+            <h2 class="inf-title">> Simple to use</h2>
+            <p>
+              turlututu.io is probably the fastest solution to get database
+              going for web and serverless applications. Model your information
+              quickly. The data management application, schema and REST API are
+              instantly available.
+            </p>
+          </div>
+
+          <div class="built">
+            <h2 class="inf-title">> Built for the modern web</h2>
+            <p>
+              Designed for the modern web with high performance REST API and
+              NoSQL MongoDB query languages, server-side codehooks, user
+              authentication (Auth0), Media Archive, Realtime messages and
+              secure Ajax/CORS.
+            </p>
+          </div>
+          <div class="productive">
+            <h2 class="inf-title">> Productive</h2>
+            <p>
+              Collaborate and work with data in a workspace on your desktop,
+              laptop or smartphone. Quickly search through all your data. Secure
+              access with roles.
+            </p>
+          </div>
+          <div class="more">
+            <h2 class="inf-title">> More than a database</h2>
+            <p>
+              turlututu.com databases can also serve web pages. Use HTML,
+              Javascript, jQuery, Angular, ReactJS (or your favorite framework)
+              on turlututu.com Pages with server-side data-binding.
+            </p>
+          </div>
         </div>
       </div>
-      <div class="division">For awesome projects with deadlines</div>
-      <div class="information">
-        <div class="use">
-          <p>> Simple to use</p>
-          <p>
-            turlututu.io is probably the fastest solution to get database going
-            for web and serverless applications. Model your information quickly.
-            The data management application, schema and REST API are instantly
-            available.
-          </p>
-        </div>
-        <div class="productive">
-          <p>> Productive</p>
-          <p>
-            Collaborate and work with data in a workspace on your desktop,
-            laptop or smartphone. Quickly search through all your data. Secure
-            access with roles.
-          </p>
-        </div>
-        <div class="built">
-          <p>> Built for the modern web</p>
-          <p>
-            Designed for the modern web with high performance REST API and NoSQL
-            MongoDB query languages, server-side codehooks, user authentication
-            (Auth0), Media Archive, Realtime messages and secure Ajax/CORS.
-          </p>
-        </div>
-        <div class="more">
-          <p>> More than a database</p>
-          <p>
-            turlututu.com databases can also serve web pages. Use HTML,
-            Javascript, jQuery, Angular, ReactJS (or your favorite framework) on
-            turlututu.com Pages with server-side data-binding.
-          </p>
-        </div>
+      <div class="division">
+        Innovative teams gets more done with turlututu.com
+      </div>
+      <div class="sponsors">
+        <img src="./assets/img/sponsors.png" alt="" />
+      </div>
+      <div class="actions">
+        <button class="restApi">REST API »</button>
+        <button class="Docs">Docs »</button>
+        <button class="building">Star Building »</button>
       </div>
     </section>
-    <footer></footer>
+    <footer>
+      <nav class="navBar">
+        <ul>
+          <li>
+            <a href="/">Home</a>
+          </li>
+          |
+          <li>
+            <a href="#about">About</a>
+          </li>
+          |
+          <li>
+            <a href="#signUp">Terms & Conditions</a>
+          </li>
+          |
+          <li>
+            <a href="#contact">Privacy Policy </a>
+          </li>
+        </ul>
+      </nav>
+      <div class="copyright">© 2017 turlututu</div>
+    </footer>
   </body>
 </html>
