Style footer and actions

--- a/reproducePage/turlututu/index.html
+++ b/reproducePage/turlututu/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <div class="myLogo">Glaucielle</div>
+      <div class="myLogo" id="home">Glaucielle</div>
       <nav class="navBar">
         <ul>
           <li>
@@ -111,7 +111,7 @@
       <nav class="navBar">
         <ul>
           <li>
-            <a href="/">Home</a>
+            <a href="#home">Home</a>
           </li>
           |
           <li>
