--- a/reproducePage/turlututu/index.html
+++ b/reproducePage/turlututu/index.html
@@ -12,112 +12,110 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <header>
-      <div class="container">
-        <div class="myLogo" id="home">Glaucielle</div>
-        <nav class="navBar">
-          <ul>
-            <li>
-              <a href="#feature">Feature</a>
-            </li>
-            <li>
-              <a href="#docs">Docs</a>
-            </li>
-            <li>
-              <a href="#blog">Blog</a>
-            </li>
-            <li>
-              <a href="#template">Template</a>
-            </li>
-            <li>
-              <a href="#pricing">Pricing</a>
-            </li>
-            <li>
-              <a href="#contact">Contact</a>
-            </li>
-            <li>
-              <a href="#signUp">Sign Up</a>
-            </li>
-            <li class="login">
-              <i class="uil uil-user nav_icon"></i
-              ><span class="loginText">Log In</span>
-            </li>
-          </ul>
-        </nav>
-      </div>
+  <body class="container">
+    <header class="full-black">
+      <div class="myLogo" id="home">Glaucielle</div>
+      <nav class="navBar">
+        <ul>
+          <li>
+            <a href="#feature">Feature</a>
+          </li>
+          <li>
+            <a href="#docs">Docs</a>
+          </li>
+          <li>
+            <a href="#blog">Blog</a>
+          </li>
+          <li>
+            <a href="#template">Template</a>
+          </li>
+          <li>
+            <a href="#pricing">Pricing</a>
+          </li>
+          <li>
+            <a href="#contact">Contact</a>
+          </li>
+          <li>
+            <a href="#signUp">Sign Up</a>
+          </li>
+          <li class="login">
+            <i class="uil uil-user nav_icon"></i
+            ><span class="loginText">Log In</span>
+          </li>
+        </ul>
+      </nav>
     </header>
-    <div class="container">
-      <section>
-        <div class="blueSection full-blue">
-          <div class="top">
-            <div class="myAvatar">
-              <img
-                src="./assets/img/AvatarMaker (2).png"
-                alt="Glaucielle's avatar"
-              />
-            </div>
-            <div class="content">
-              <p>The Plug and Play Database service</p>
-              <button>Start building NOW >></button>
-            </div>
-          </div>
-          <div class="division full-division">
-            For awesome projects with deadlines
-          </div>
-          <div class="information">
-            <div class="use">
-              <h2 class="inf-title">> Simple to use</h2>
-              <p>
-                turlututu.io is probably the fastest solution to get database
-                going for web and serverless applications. Model your
-                information quickly. The data management application, schema and
-                REST API are instantly available.
-              </p>
-            </div>
 
-            <div class="built">
-              <h2 class="inf-title">> Built for the modern web</h2>
-              <p>
-                Designed for the modern web with high performance REST API and
-                NoSQL MongoDB query languages, server-side codehooks, user
-                authentication (Auth0), Media Archive, Realtime messages and
-                secure Ajax/CORS.
-              </p>
-            </div>
-            <div class="productive">
-              <h2 class="inf-title">> Productive</h2>
-              <p>
-                Collaborate and work with data in a workspace on your desktop,
-                laptop or smartphone. Quickly search through all your data.
-                Secure access with roles.
-              </p>
-            </div>
-            <div class="more">
-              <h2 class="inf-title">> More than a database</h2>
-              <p>
-                turlututu.com databases can also serve web pages. Use HTML,
-                Javascript, jQuery, Angular, ReactJS (or your favorite
-                framework) on turlututu.com Pages with server-side data-binding.
-              </p>
-            </div>
+    <section>
+      <div class="blueSection full-blue">
+        <div class="top">
+          <div class="myAvatar">
+            <img
+              src="./assets/img/AvatarMaker (2).png"
+              alt="Glaucielle's avatar"
+            />
+          </div>
+          <div class="content">
+            <p>The Plug and Play Database service</p>
+            <button>Start building NOW >></button>
           </div>
         </div>
-        <div class="division color">
-          Innovative teams gets more done with turlututu.com
+        <div class="division full-division">
+          For awesome projects with deadlines
         </div>
-        <div class="sponsors full-sponsors">
-          <img src="./assets/img/sponsors.png" alt="" />
+        <div class="information">
+          <div class="use">
+            <h2 class="inf-title">> Simple to use</h2>
+            <p>
+              turlututu.io is probably the fastest solution to get database
+              going for web and serverless applications. Model your information
+              quickly. The data management application, schema and REST API are
+              instantly available.
+            </p>
+          </div>
+
+          <div class="built">
+            <h2 class="inf-title">> Built for the modern web</h2>
+            <p>
+              Designed for the modern web with high performance REST API and
+              NoSQL MongoDB query languages, server-side codehooks, user
+              authentication (Auth0), Media Archive, Realtime messages and
+              secure Ajax/CORS.
+            </p>
+          </div>
+          <div class="productive">
+            <h2 class="inf-title">> Productive</h2>
+            <p>
+              Collaborate and work with data in a workspace on your desktop,
+              laptop or smartphone. Quickly search through all your data. Secure
+              access with roles.
+            </p>
+          </div>
+          <div class="more">
+            <h2 class="inf-title">> More than a database</h2>
+            <p>
+              turlututu.com databases can also serve web pages. Use HTML,
+              Javascript, jQuery, Angular, ReactJS (or your favorite framework)
+              on turlututu.com Pages with server-side data-binding.
+            </p>
+          </div>
         </div>
-        <div class="actions">
-          <button class="restApi">REST API »</button>
-          <button class="Docs">Docs »</button>
-          <button class="building">Star Building »</button>
-        </div>
-      </section>
-    </div>
-    <footer>
-      <nav class="navFooter container">
+      </div>
+      <div class="division color">
+        Innovative teams gets more done with turlututu.com
+      </div>
+      <div class="sponsors full-sponsors">
+        <img src="./assets/img/sponsors.png" alt="" />
+      </div>
+      <div class="actions">
+        <button class="restApi">REST API »</button>
+        <button class="Docs">Docs »</button>
+        <button class="building">Star Building »</button>
+      </div>
+    </section>
+
+    <footer class="full-black">
+      <nav class="navFooter">
         <ul>
           <li>
             <a href="#home">Home</a>
