--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
       >2 - Progressive enhancement
     </a>
     <a href="/be-code/turlututu" target="icontent"> 2.1 - Turlututu copy</a>
-    <a href="/be-code/vs-card" target="icontent"> 2.1 - VS Card</a>
+    <a href="/be-code/vs-card" target="icontent"> 2.1 - V-Card</a>
     <iframe
       id="icontent"
       name="icontent"
-      src="/github-pages-test/project-a"
+      src="/be-code/my-becode"
       scrolling="no"
       allowTransparency="true"
     ></iframe>
