GitHub page actions

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   </style>
   <body>
     <a href="/be-code/my-becode" target="icontent"> 1 - My readme </a>
-    <a href="/be-code/chinese-farmer" target="icontent"
-      >2 - Progressive enhancement
-    </a>
+    <a href="/be-code/chinese-farmer" target="icontent">
+      2 - Progressive enhancement</a
+    >
     <a href="/be-code/turlututu" target="icontent"> 2.1 - Turlututu copy</a>
     <a href="/be-code/vs-card" target="icontent"> 2.1 - V-Card</a>
     <iframe
