Set up github action

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <iframe
       id="icontent"
       name="icontent"
-      src="/be-code/my-becode"
+      src="/be-code/chinese-farmer"
       scrolling="no"
       allowTransparency="true"
     ></iframe>
