--- a/index.html
+++ b/index.html
@@ -8,14 +8,35 @@
   </head>
   <style>
     :root {
-      --header-height: 4rem;
+      --header-height: 3rem;
     }
     body {
       margin: 0;
     }
+    .container {
+      height: 20rem;
+      background-color: rgb(228, 228, 228);
+      padding: 1rem 5rem;
+    }
+
+    .projects {
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+    }
+    h1 {
+      color: rgb(5, 64, 101);
+    }
     a {
       min-height: var(--header-height);
-      display: inline-block;
+      color: black;
+      text-decoration: none;
+      font-size: 1.3rem;
+    }
+    a:hover {
+      color: rgb(5, 64, 101);
+      text-decoration: underline;
+      text-underline-offset: 0.4rem;
     }
     iframe {
       display: block; /* iframes are inline by default */
@@ -25,16 +46,24 @@
     }
   </style>
   <body>
-    <a href="/be-code/my-becode" target="icontent"> 1 - My readme </a>
-    <a href="/be-code/chinese-farmer" target="icontent">
-      2 - Progressive enhancement</a
-    >
-    <a href="/be-code/turlututu" target="icontent"> 2.1 - Turlututu copy</a>
-    <a href="/be-code/vs-card" target="icontent"> 3- V-Card</a>
+    <div class="container">
+      <div class="becode">
+        <h1>Brussel's Johnson 09</h1>
+        <p>This is a repository for my BeCode projects.</p>
+      </div>
+      <div class="projects">
+        <a href="/be-code/my-becode" target="icontent"> 1 - My readme </a>
+        <a href="/be-code/chinese-farmer" target="icontent">
+          2 - Progressive enhancement</a
+        >
+        <a href="/be-code/turlututu" target="icontent"> 2.1 - Turlututu copy</a>
+        <a href="/be-code/vs-card" target="icontent"> 3- V-Card</a>
+      </div>
+    </div>
     <iframe
       id="icontent"
       name="icontent"
-      src="/be-code/chinese-farmer"
+      src="/be-code/"
       scrolling="no"
       allowTransparency="true"
     ></iframe>
