Style repository page

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <iframe
       id="icontent"
       name="icontent"
-      src="/be-code/"
+      src="/be-code/my-becode"
       scrolling="no"
       allowTransparency="true"
     ></iframe>
