--- a/v-card/index.html
+++ b/v-card/index.html
@@ -19,16 +19,16 @@
           <div class="logo">Glaucielle</div>
           <div class="contact flex">
             <div class="email">
-              <p class="title">Email</p>
+              <p class="my-social">Email</p>
               <p>glauciellesa@gmail.com</p>
             </div>
             <div class="phone">
-              <p class="title">Phone</p>
+              <p class="my-social">Phone</p>
               <p>+32 495 99 90 50</p>
             </div>
 
-            <div class="home_social flex">
-              <p class="title">Find Me On</p>
+            <div class="home-social flex">
+              <p class="my-social">Find Me On</p>
               <div class="social-icons">
                 <a
                   href="https://www.linkedin.com/in/glauciellec/"
@@ -65,33 +65,35 @@
             </div>
           </div>
         </div>
-        <div class="description-info flex">
-          <div class="title flex">
-            <p class="name">Glaucielle Sa</p>
-            <p class="profession">Full Stack developer - BeCode</p>
-          </div>
-          <div class="my-description">
-            <p>
-              I'm Glaucielle Sa, passionate about technology and self-taught. I
-              work using JavaScript, HTML, CSS to ​​build impactful, interactive
-              and dynamic UIs. I'm an excellent team player with great
-              communication skills.
-            </p>
-          </div>
-          <div class="info-buttons">
-            <button class="portfolio">
-              <a href="https://glauciellesa.github.io/" target="_blank">
-                Portfolio
-              </a>
-            </button>
-            <button class="resume">
-              <a
-                href="./assets/Glaucielle-Sa-FullStack-Developer.pdf"
-                target="_blank"
-              >
-                RESUME
-              </a>
-            </button>
+        <div class="description flex">
+          <div class="description-container">
+            <div class="title flex">
+              <p class="title-name">GLAUCIELLE SA</p>
+              <p class="title-profession">Full Stack developer - BeCode</p>
+            </div>
+            <div class="my-description">
+              <p>
+                I'm Glaucielle Sa, passionate about technology and self-taught.
+                I work using JavaScript, HTML, CSS to ​​build impactful,
+                interactive and dynamic UIs. I'm an excellent team player with
+                great communication skills.
+              </p>
+            </div>
+            <div class="info-buttons">
+              <button class="portfolio">
+                <a href="https://glauciellesa.github.io/" target="_blank">
+                  PORTFOLIO
+                </a>
+              </button>
+              <button class="resume">
+                <a
+                  href="./assets/Glaucielle-Sa-FullStack-Developer.pdf"
+                  target="_blank"
+                >
+                  RESUME
+                </a>
+              </button>
+            </div>
           </div>
         </div>
         <div class="my-img">
