--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           2 - Progressive enhancement</a
         >
         <a href="/be-code/turlututu" target="icontent"> 2.1 - Turlututu copy</a>
-        <a href="/be-code/vs-card" target="icontent"> 3- V-Card</a>
+        <a href="/be-code/v-card" target="icontent"> 3- V-Card</a>
       </div>
     </div>
     <iframe
