--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     }
     body {
       margin: 0;
+      display: flex;
     }
     .container {
-      height: 20rem;
+      width: 25rem;
+      height: 100vh;
       background-color: rgb(228, 228, 228);
-      padding: 1rem 5rem;
+      padding: 1rem;
     }
 
     .projects {
