--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
     .container {
       width: 25rem;
-
+      height: 100%;
       background-color: rgb(228, 228, 228);
       padding: 1rem;
     }
