--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       width: 25rem;
       height: 100vh;
       background-color: rgb(228, 228, 228);
-      padding: 1rem;
+      padding: 0 1rem;
     }
 
     .projects {
@@ -41,9 +41,6 @@
       text-underline-offset: 0.4rem;
     }
     iframe {
-      display: block; /* iframes are inline by default */
-      border: none; /* reset default border */
-      height: calc(100vh - var(--header-height));
       width: 100vw;
     }
   </style>
@@ -66,7 +63,6 @@
       id="icontent"
       name="icontent"
       src="/be-code/my-becode"
-      scrolling="no"
       allowTransparency="true"
     ></iframe>
   </body>
