--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <iframe
       id="icontent"
       name="icontent"
-      src="/be-code/my-becode"
+      src="/v-card/index.html"
       allowTransparency="true"
     ></iframe>
   </body>
