--- a/v-card/index.html
+++ b/v-card/index.html
@@ -16,7 +16,9 @@
     <div class="container flex">
       <div class="content">
         <div class="social-info flex">
-          <div class="logo">Glaucielle</div>
+          <div class="logo">
+            <img src="./assets/logo.png" alt="" />
+          </div>
           <div class="contact flex">
             <div class="email">
               <p class="my-social">Email</p>
