--- a/pixel-perfect/index.html
+++ b/pixel-perfect/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="assets/style.css" />
   </head>
   <body>
-    <h1>test</h1>
+    <section class="container">
+      <p class="page-info">Page Templates</p>
+      <h1>An elegant website is moments away.</h1>
+      <p>
+        Ilk is a full equipped template offering a versatile collection of
+        landing pages and a full suite of inner pages to power your entire site.
+      </p>
+      <button class="btn">Explore layouts</button>
+    </section>
   </body>
 </html>
