Add style to page

--- a/pixel-perfect/index.html
+++ b/pixel-perfect/index.html
@@ -9,13 +9,16 @@
   </head>
   <body>
     <section class="container">
-      <p class="page-info">Page Templates</p>
-      <h1>An elegant website is moments away.</h1>
-      <p>
-        Ilk is a full equipped template offering a versatile collection of
-        landing pages and a full suite of inner pages to power your entire site.
-      </p>
-      <button class="btn">Explore layouts</button>
+      <div class="content">
+        <p class="page">Page Templates</p>
+        <h1>An elegant website is moments away.</h1>
+        <p class="page-info">
+          Ilk is a full equipped template offering a versatile collection of
+          landing pages and a full suite of inner pages to power your entire
+          site.
+        </p>
+        <button class="btn">Explore layouts</button>
+      </div>
     </section>
   </body>
 </html>
