--- a/pixel-perfect/index.html
+++ b/pixel-perfect/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="assets/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
   </head>
   <body>
+    <header></header>
     <section class="container">
       <div class="content">
         <p class="page">Page Templates</p>
@@ -18,6 +23,33 @@
           site.
         </p>
         <button class="btn">Explore layouts</button>
+      </div>
+      <div class="complex-pixel-plan">
+        <p class="title-complex">Enterprise</p>
+        <p class="description-title-complex">
+          Torquatos nostros quos tu tam inportuno tamque crudeli sin ut ita
+        </p>
+        <div class="price-container">
+          <p class="price">$48</p>
+          <span class="price-description">per user per month</span>
+        </div>
+        <div class="details">
+          <p class="title-detail">
+            <i class="fa-solid fa-cube"></i>
+            <span>Everything in Professional, </span> plus:
+          </p>
+          <ul class="list">
+            <li><i class="fa-solid fa-check"></i> 500+ Components</li>
+            <li><i class="fa-solid fa-check"></i> Unlimited Projects</li>
+            <li>
+              <i class="fa-solid fa-check"></i> Interactions
+              <i class="fa-solid fa-circle-info"></i>
+            </li>
+            <li><i class="fa-solid fa-check"></i> Ecommerce Features</li>
+            <li><i class="fa-solid fa-check"></i> 24/7 Support</li>
+          </ul>
+          <botton class="btn-plan"> Start Free Trial</botton>
+        </div>
       </div>
     </section>
   </body>
