complex wireframe for card

--- a/pixel-perfect/index.html
+++ b/pixel-perfect/index.html
@@ -52,5 +52,77 @@
         </div>
       </div>
     </section>
+    <section class="team" id="team">
+      <div class="container-team">
+        <div class="card-team">
+          <p class="role">Founder, CEO</p>
+          <img src="assets/img/team-1.png" alt="CEO's picture" />
+          <div class="description">
+            <p class="name">Heather Clarck</p>
+            <p class="role-description">
+              Certe ertinax non munquam eius modi tempora incidunt, ut out quid
+              sit id, quod omnium philosophorum sententia tale debet esse, ut et
+              iusto odio.
+            </p>
+          </div>
+          <div class="social-media">
+            <i class="fa-brands fa-square-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </div>
+        <div class="card-team">
+          <p class="role">Designer</p>
+          <img src="assets/img/team-2.png" alt="CEO's picture" />
+          <div class="description">
+            <p class="name">Oliver Khan</p>
+            <p class="role-description">
+              Certe ertinax non munquam eius modi tempora incidunt, ut out quid
+              sit id, quod omnium philosophorum sententia tale debet esse, ut et
+              iusto odio.
+            </p>
+          </div>
+          <div class="social-media">
+            <i class="fa-brands fa-square-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </div>
+        <div class="card-team">
+          <p class="role">PR Manager</p>
+          <img src="assets/img/team-3.png" alt="CEO's picture" />
+          <div class="description">
+            <p class="name">Alison Wong</p>
+            <p class="role-description">
+              Certe ertinax non munquam eius modi tempora incidunt, ut out quid
+              sit id, quod omnium philosophorum sententia tale debet esse, ut et
+              iusto odio.
+            </p>
+          </div>
+          <div class="social-media">
+            <i class="fa-brands fa-square-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </div>
+        <div class="card-team">
+          <p class="role">Developer</p>
+          <img src="assets/img/team-1.png" alt="CEO's picture" />
+          <div class="description">
+            <p class="name">Dave Thomas</p>
+            <p class="role-description">
+              Certe ertinax non munquam eius modi tempora incidunt, ut out quid
+              sit id, quod omnium philosophorum sententia tale debet esse, ut et
+              iusto odio.
+            </p>
+          </div>
+          <div class="social-media">
+            <i class="fa-brands fa-square-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
