complex wireframe for card

--- a/pixel-perfect/index.html
+++ b/pixel-perfect/index.html
@@ -107,7 +107,7 @@
         </div>
         <div class="card-team">
           <p class="role">Developer</p>
-          <img src="assets/img/team-1.png" alt="CEO's picture" />
+          <img src="assets/img/team-4.jpg" alt="CEO's picture" />
           <div class="description">
             <p class="name">Dave Thomas</p>
             <p class="role-description">
