change team images

--- a/pixel-perfect/index.html
+++ b/pixel-perfect/index.html
@@ -55,7 +55,7 @@
       <div class="container-team">
         <div class="card-team">
           <p class="role">Founder, CEO</p>
-          <img src="assets/img/team-1.png" alt="CEO's picture" />
+          <img src="assets/img/team-1.jpg" alt="CEO's picture" />
           <div class="description">
             <p class="name">Heather Clarck</p>
             <p class="role-description">
@@ -89,7 +89,7 @@
         </div>
         <div class="card-team">
           <p class="role">PR Manager</p>
-          <img src="assets/img/team-3.png" alt="CEO's picture" />
+          <img src="assets/img/team-3.jpg" alt="CEO's picture" />
           <div class="description">
             <p class="name">Alison Wong</p>
             <p class="role-description">
